@@ -1,6 +1,8 @@
 ggplot2 0.8.1  (2008-XX-XX)
 ----------------------------------------
 
+* geom_vline and geom_hline now correctly transform their intercepts if the scale is transformed    
+* geom_vline and geom_hline: now use xintercept and yintercept instead of intercept
 * scale_discrete_position: does a better job of calculating axis limits when plotting a mixture of continuous and discrete values (e.g. with geom_jitter)
 * facet_wrap: labels correctly clipped to axis ranges
 * facet_wrap: fixed bug with ncol = 1 or nrow = 1
